# hydrogen

./: .appveyor.yml  .clang-format  .clang-tidy  .directory  .editorconfig  .gitignore  .gitmodules  .lvimrc  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING.TinyXML  ChangeLog  DEVELOPERS  DEVELOPERS.md  Doxyfile.in  INSTALL  INSTALL.md  INSTALL.txt  LICENSE.txt  LV2_Todo.md  Makefile  Makefile.cvs  Makefile.in  NEWS.md  README  README.md  README.txt  Sconstruct  TODO_JACK_ZOMBIES.txt  _config.yml  all.pro  autogen.sh  build.sh  config.h  config.h.in  configure  configure.in  contribution.md  (+33 more)
data/: CMakeLists.txt  DefaultSong.h2song  core.conf  hydrogen.default.conf
data/demo_songs/: GM_kit_Diddley.h2song  GM_kit_Jazzy.h2song  GM_kit_demo1.h2song  GM_kit_demo2.h2song  GM_kit_demo3.h2song  TR808kit-demo.h2song  tutorial_georgyporgy.h2song
data/doc/: Makefile  MidiInstrumentMapping.ods  README.DOCUMENTATION.txt  TODO  manual.docbook  manual.html  manual.pot  manual_ca.html  manual_ca.po  manual_de.html  manual_en.docbook  manual_en.html  manual_es.docbook  manual_es.html  manual_es.po  manual_fr.docbook  manual_fr.html  manual_fr.po  manual_it.docbook  manual_it.html  manual_it.po  manual_nl.docbook  manual_nl.html  manual_nl.po  tutorial.docbook  tutorial.pot  tutorial_en.docbook  tutorial_en.html  tutorial_en.pot  tutorial_es.docbook  tutorial_es.html  tutorial_es.po  tutorial_fr.docbook  tutorial_fr.html  tutorial_fr.po  tutorial_it.docbook  tutorial_it.html  tutorial_it.po  updateManuals.sh
data/drumkit_maps/: 3355606kit.h2map  AVLDrumkits-BlackPearl-2023.h2map  AVLDrumkits-BlondeBop.h2map  AVLDrumkits-BuskmansHoliday.h2map  AVLDrumkits-RedZeppelin-2023.h2map  Audiophob.h2map  BJA_Pacific.h2map  BeatBuddy_Kit.h2map  BigMono.h2map  Boss_DR-110.h2map  Classic-626.h2map  Classic-808.h2map  ColomboAcousticDrumkit.h2map  Dave_Grohl.h2map  DeathMetal.h2map  Denon CRB-90.h2map  Denon_CRB-90.h2map  EasternHop-1.h2map  ElectricEmpireKit.h2map  ErnysPercussion.h2map  Flac_GSCW-1.h2map  Flac_GSCW-2.h2map  Forzee_Stereo_Drumkit.h2map  GMRockKit.h2map  Gimme_A_Hand_1.0.h2map  HardElectro1.h2map  HipHop-1.h2map  HipHop-2.h2map  Ian_Paice.h2map  JazzFunkKit.h2map  John Bonham.h2map  John_Bonham.h2map  K-27_Trash_Kit.h2map  Lightning1024.h2map  Millo-Drums_v.1.h2map  Millo_MultiLayered2.h2map  Millo_MultiLayered3.h2map  Roland_MC-307_CR78Cheaps.h2map  Roland_MC-307_TR-606.h2map  Roland_MC-307_TR-808.h2map  (+18 more)
data/i18n/: CMakeLists.txt  README.md  hydrogen.ca.qm  hydrogen.ca.ts  hydrogen.cs.qm  hydrogen.cs.ts  hydrogen.de.qm  hydrogen.de.ts  hydrogen.el.qm  hydrogen.el.ts  hydrogen.es.qm  hydrogen.es.ts  hydrogen.fr.qm  hydrogen.fr.ts  hydrogen.gl.qm  hydrogen.gl.ts  hydrogen.hr.qm  hydrogen.hr.ts  hydrogen.hu_HU.qm  hydrogen.hu_HU.ts  hydrogen.it.qm  hydrogen.it.ts  hydrogen.ja.qm  hydrogen.ja.ts  hydrogen.nl.qm  hydrogen.nl.ts  hydrogen.pl.qm  hydrogen.pl.ts  hydrogen.pt_BR.qm  hydrogen.pt_BR.ts  hydrogen.ru.qm  hydrogen.ru.ts  hydrogen.sr.qm  hydrogen.sr.ts  hydrogen.sv.qm  hydrogen.sv.ts  hydrogen.uk.qm  hydrogen.uk.ts  hydrogen_ca.ts  hydrogen_cs.ts  (+21 more)
data/new_manual/: index.html
data/new_tutorial/: tutorial_en.html
data/themes/: default.h2theme
data/xsd/: drumkit.xsd  drumkit_map.xsd  drumkit_pattern.xsd  pattern.xsd  playlist.xsd
gui/: CMakeLists.txt  gui.pro
gui/src/: AboutDialog.cpp  AboutDialog.h  AudioEngineInfoForm.cpp  AudioEngineInfoForm.h  Director.cpp  Director.h  DrumkitManager.cpp  DrumkitManager.h  EventListener.h  ExportSongDialog.cpp  ExportSongDialog.h  FilePreview.cpp  FilePreview.h  HelpBrowser.cpp  HelpBrowser.h  HydrogenApp.cpp  HydrogenApp.h  InstrumentRack.cpp  InstrumentRack.h  LadspaFXProperties.cpp  LadspaFXProperties.h  LadspaFXSelector.cpp  LadspaFXSelector.h  MainForm.cpp  MainForm.h  MetroBlinker.cpp  MetroBlinker.h  MetroBlinker_UI.ui  PatternFillDialog.cpp  PatternFillDialog.h  PatternPropertiesDialog.cpp  PatternPropertiesDialog.h  PlayerControl.cpp  PlayerControl.h  Precompiled.h  PreferencesDialog.cpp  PreferencesDialog.h  Skin.h  SongPropertiesDialog.cpp  SongPropertiesDialog.h  (+6 more)
src/bindings/: CMakeLists.txt  README.md  core_bindings.h  core_bindings.xml  err  gui_bindings.h  gui_bindings.xml  h2core.yaml  h2core_module.cpp  h2core_module.hpp  h2test.py
src/cli/: CMakeLists.txt  main.cpp
src/core/: AudioEngine.cpp  AudioEngine.h  AutomationPathSerializer.cpp  AutomationPathSerializer.h  CMakeLists.txt  CoreActionController.cpp  CoreActionController.h  EventQueue.cpp  EventQueue.h  Globals.h  H2Exception.h  Hydrogen.cpp  Hydrogen.h  Hydrogen.h.rej  License.cpp  License.h  LocalFileMgr.cpp  LocalFileMng.h  Logger.cpp  Logger.h  MidiAction.cpp  MidiAction.h  MidiMap.cpp  MidiMap.h  Nsm.h  NsmClient.cpp  NsmClient.h  Object.cpp  Object.h  OscServer.cpp  OscServer.h  Preferences.cpp  Preferences.h  Timehelper.cpp  Timehelper.h  Timeline.cpp  Timeline.h  Version.cpp  Version.h  config.dox  (+3 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  AudioEngineInfoForm.cpp  AudioEngineInfoForm.h  CMakeLists.txt  DrumkitManager.cpp  DrumkitManager.h  EventListener.h  ExportSongDialog.cpp  ExportSongDialog.h  FilePreview.cpp  FilePreview.h  HelpBrowser.cpp  HelpBrowser.h  HydrogenApp.cpp  HydrogenApp.h  LadspaFXProperties.cpp  LadspaFXProperties.h  LadspaFXSelector.cpp  LadspaFXSelector.h  MainForm.cpp  MainForm.h  PatternFillDialog.cpp  PatternFillDialog.h  PatternPropertiesDialog.cpp  PatternPropertiesDialog.h  PlayerControl.cpp  PlayerControl.h  PreferencesDialog.cpp  PreferencesDialog.h  Selection.h  Skin.h  SongPropertiesDialog.cpp  SongPropertiesDialog.h  SplashScreen.cpp  SplashScreen.h  main.cpp
src/lv2ui/: CMakeLists.txt  h2lv2ui.cpp  uris.h
src/player/: CMakeLists.txt  main.cpp
src/pybind11_bindings/: CMakeLists.txt  core_bindings.conf  core_bindings.h  custom_qt_casters.h  hydra.cpp  hydra.modules  hydra.sources
src/synth/: CMakeLists.txt  main.cpp
src/tests/: #registeredTests.h#  AdsrTest.cpp  AdsrTest.h  AssertionTest.cpp  AudioBenchmark.cpp  AudioBenchmark.h  AudioDriverTest.cpp  AudioDriverTest.h  AudioEngineTest.cpp  CliTest.h  (+93 more)
(+1998 files in other folders)
